Fixed overflow

--- a/frontend/src/styles/columnStyling.css
+++ b/frontend/src/styles/columnStyling.css
@@ -7,7 +7,7 @@
   background-color: #ffffff; /* Background color */
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); /* Adding shadow to box */
   height: 100%;
-  max-height: 85vh;
+  max-height: 75vh;
   overflow-y: auto;
 }
 
